# nexus-inventory-system

./: .gitignore  create_tables.py
legacy_python/: Dockerfile  docker-compose.yml  requirements.txt
legacy_python/app/: main.py
legacy_python/app/api/endpoints/: auth.py  tenants.py  users.py
legacy_python/app/core/: config.py  database.py  security.py
legacy_python/app/models/: product.py  tenant.py  user.py
legacy_python/app/schemas/: tenant.py  token.py  user.py
nexus-core/: Cargo.toml  build.rs
nexus-core/src/: main.rs
nexus-gateway/: go.mod  main.go
proto/: inventory.proto
